# kvm-pirate

./: README.md  default.nix  setup.cfg
.github/workflows/: test.yml
kvm_pirate/: __main__.py  coredump.py  cpu.py  generate_syscalls.py  inject_syscall.py  kvm.py  kvm_memslots.py  libc.py  pidfd.py  proc.py  ptrace.py
kvm_pirate/elf/: __init__.py  consts.py  structs.py
kvm_pirate/syscalls/: __init__.py  arm.py  arm64.py  i386.py  powerpc.py  x86_64.py
scripts/: attach-qemu.sh  capsh.sh
tests/: test_proc.py  test_syscall_inject.py  threaded.c
