[metadata]
name = nix-update
version = 0.0.0
author = Jörg Thalheim
author-email = joerg@thalheim.io
home-page = https://github.com/Mic92/kvm-pirate
description = Attach to kvm-based VMs
long-description = file: README.md
license = MIT
license-file = LICENSE.md
platform = any
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Topic :: Utilities
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8

[options]
zip_safe = true
include_package_data = true
python_requires = >= 3.8
packages = find:
setup_requires =
    setuptools

[options.entry_points]
console_scripts =
    kvm_pirate = kvm_pirate:main

[bdist_wheel]
universal = true

[check]
metadata = true
restructuredtext = true
strict = true[wheel]
universal = 1

[pycodestyle]
max-line-length = 88
ignore = E501,E741,W503

[flake8]
max-line-length = 88
ignore = E501,E741,W503
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist

[mypy]
warn_redundant_casts = true
disallow_untyped_calls = true
disallow_untyped_defs = true
no_implicit_optional = true

[mypy-setuptools.*]
ignore_missing_imports = True

[mypy-bcc.*]
ignore_missing_imports = True

[isort]
profile = black
